--- a/app/index.html
+++ b/app/index.html
@@ -91,6 +91,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/calcul.js"></script>
+        <script src="scripts/services/calculateur.js"></script>
         <!-- endbuild -->
 </body>
 </html>
