--- a/app/index.html
+++ b/app/index.html
@@ -92,6 +92,7 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/calcul.js"></script>
         <script src="scripts/services/calculateur.js"></script>
+        <script src="scripts/controllers/todolist.js"></script>
         <!-- endbuild -->
 </body>
 </html>
